Archivos inecesarios e imports

--- a/TareaPrioridades/TareaPrioridades/TareaPrioridades.csproj
+++ b/TareaPrioridades/TareaPrioridades/TareaPrioridades.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\Pages\R_Prioridades.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,6 +20,18 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Components\Pages\R_Prioridades.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Components\Pages\R_Prioridades.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Components\Pages\R_Prioridades.razor" />
   </ItemGroup>
 
 </Project>
