BLL, Cambios a la Base de datos, Clientes, Contexto

--- a/TareaPrioridades/TareaPrioridades/appsettings.json
+++ b/TareaPrioridades/TareaPrioridades/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConStr": "Data source = Data\\Prioridades.Db"
+    "ConStr": "Data source = Data\\DBTickets.Db"
   },
   "Logging": {
     "LogLevel": {
