--- a/TareaPrioridades/TareaPrioridades/TareaPrioridades.csproj
+++ b/TareaPrioridades/TareaPrioridades/TareaPrioridades.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
